    tabs, one for general informations, one for database selection.
    Database selection is now clearer since available databases and
    selected databases are separated. New status bar and greyed  window to give
    the user informations about what is happening. New "server informations"
    button. Double-click on a database row to get informations about it.

2006-11-15 Mathieu Blondel <mblondel@cvs.gnome.org>

    * data/fantasdic/glade/preferences_dialog.glade:
    * lib/fantasdic/ui/main_app.rb:
    * lib/fantasdic/ui/preferences_dialog.rb: new option so user can choose
     whether he or she wants Fantasdic to look up the last word at start up

    * README:
    * lib/fantasdic.rb:
    * lib/fantasdic/command_line.rb:
    * lib/fantasdic/ui.rb:
    * lib/fantasdic/ui/main_app.rb: new command line options. Fantasdic can be
    started with a dictionary and a word as parameters, if an instance of
    Fantasdic exists already, we use it, an option exists to print results to
    stdout (which makes Fantasdic a command-line dictionary too), the list of
    dictionaries in the settings as well as the strategies for a dictionary
    can now be listed.

    * lib/fantasdic/command_line.rb:
    * lib/fantasdic/ui/main_app.rb: basic authentication support (not tested)

2006-11-14 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: hold connections for some time and close
      too long connections.

    * lib/fantasdic/ui/main_app.rb:
    * lib/fantasdic/ui/result_text_view.rb:
    * data/fantasdic/ui/menus.xml:
    * data/fantasdic/glade/main_app.glade: a new find pane to find words inside
    the text view, a new save definition dialog, Edit > Copy, and 
    Edit > Select All.             

2006-06-25 Mathieu Blondel <mblondel@cvs.gnome.org>

    * tools/: added dict-proxy.rb, dict-server.rb, edict2dictd.rb,
    kanjidic22dictd.rb, README, stardict2dictd.rb, tanakacorpus2dictd.rb

2006-06-22 Mathieu Blondel <mblondel@cvs.gnome.org>
