@@ -28,64 +28,77 @@
       <property name="spacing">0</property>
 
       <child>
-	<widget class="GtkHBox" id="hbox1">
+	<widget class="GtkAlignment" id="alignment3">
 	  <property name="visible">True</property>
-	  <property name="homogeneous">False</property>
-	  <property name="spacing">4</property>
+	  <property name="xalign">0.5</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xscale">1</property>
+	  <property name="yscale">1</property>
+	  <property name="top_padding">4</property>
+	  <property name="bottom_padding">2</property>
+	  <property name="left_padding">4</property>
+	  <property name="right_padding">4</property>
 
 	  <child>
-	    <widget class="GtkButton" id="search_button">
+	    <widget class="GtkHBox" id="hbox1">
 	      <property name="visible">True</property>
-	      <property name="can_focus">True</property>
-	      <property name="label" translatable="yes">_Look Up</property>
-	      <property name="use_underline">True</property>
-	      <property name="relief">GTK_RELIEF_NONE</property>
-	      <property name="focus_on_click">True</property>
-	    </widget>
-	    <packing>
-	      <property name="padding">0</property>
-	      <property name="expand">False</property>
-	      <property name="fill">False</property>
-	    </packing>
-	  </child>
+	      <property name="homogeneous">False</property>
+	      <property name="spacing">4</property>
 
-	  <child>
-	    <widget class="GtkEntry" id="search_entry">
-	      <property name="height_request">30</property>
-	      <property name="visible">True</property>
-	      <property name="can_focus">True</property>
-	      <property name="editable">True</property>
-	      <property name="visibility">True</property>
-	      <property name="max_length">0</property>
-	      <property name="text" translatable="yes"></property>
-	      <property name="has_frame">True</property>
-	      <property name="invisible_char">*</property>
-	      <property name="activates_default">True</property>
-	    </widget>
-	    <packing>
-	      <property name="padding">0</property>
-	      <property name="expand">True</property>
-	      <property name="fill">True</property>
-	    </packing>
-	  </child>
+	      <child>
+		<widget class="GtkComboBox" id="strategy_cb">
+		  <property name="visible">True</property>
+		  <property name="has_focus">True</property>
+		  <property name="items">Dictionary</property>
+		  <property name="add_tearoffs">False</property>
+		  <property name="focus_on_click">False</property>
+		</widget>
+		<packing>
+		  <property name="padding">0</property>
+		  <property name="expand">False</property>
+		  <property name="fill">False</property>
+		</packing>
+	      </child>
 
-	  <child>
-	    <widget class="GtkComboBox" id="dictionary_cb">
-	      <property name="visible">True</property>
-	      <property name="has_focus">True</property>
-	      <property name="items">Dictionary</property>
-	      <property name="add_tearoffs">False</property>
-	      <property name="focus_on_click">False</property>
+	      <child>
+		<widget class="GtkEntry" id="search_entry">
+		  <property name="height_request">30</property>
+		  <property name="visible">True</property>
+		  <property name="can_focus">True</property>
+		  <property name="editable">True</property>
+		  <property name="visibility">True</property>
+		  <property name="max_length">0</property>
+		  <property name="text" translatable="yes"></property>
+		  <property name="has_frame">True</property>
+		  <property name="invisible_char">*</property>
+		  <property name="activates_default">True</property>
+		</widget>
+		<packing>
+		  <property name="padding">0</property>
+		  <property name="expand">True</property>
+		  <property name="fill">True</property>
+		</packing>
+	      </child>
+
+	      <child>
+		<widget class="GtkComboBox" id="dictionary_cb">
+		  <property name="visible">True</property>
+		  <property name="has_focus">True</property>
+		  <property name="items">Dictionary</property>
+		  <property name="add_tearoffs">False</property>
+		  <property name="focus_on_click">False</property>
+		</widget>
+		<packing>
+		  <property name="padding">0</property>
+		  <property name="expand">False</property>
+		  <property name="fill">False</property>
+		</packing>
+	      </child>
 	    </widget>
-	    <packing>
-	      <property name="padding">0</property>
-	      <property name="expand">False</property>
-	      <property name="fill">False</property>
-	    </packing>
 	  </child>
 	</widget>
 	<packing>
-	  <property name="padding">3</property>
+	  <property name="padding">0</property>
 	  <property name="expand">False</property>
 	  <property name="fill">False</property>
 	</packing>
